--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f0f0f0; 
+    background-color: #72bf6a; 
     font-family: sans-serif; 
     margin: 0; 
     padding: 20px; 
